# driveline

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  comma2k19.mcap  comma2k19.mf4  comma2k19_seg10.mp4.timestamps  deny.toml  driveline-cv-summary.md  package.json  pnpm-lock.yaml  wrangler.toml
.claude/: daily-review-state.json  settings.json  test-audit-state.json
.claude/commands/: daily-review.md
.github/workflows/: ci.yml  deploy.yml  license-check.yml
apps/e2e/: package.json  playwright.config.ts  playwright.demo.config.ts  tsconfig.json
apps/web/: .prettierignore  index.html  package.json  tsconfig.json  vite.config.ts
crates/data-cli/: Cargo.toml
crates/data-cli/src/: lib.rs  main.rs
crates/data-core/: Cargo.toml
crates/data-core/examples/: gen_fixture.rs  gen_mcap_fixture.rs  gen_mcap_zstd_fixture.rs  gen_mf4_fixture.rs  gen_mp4_fixture.rs  probe_external.rs
crates/data-core/src/: arrow.rs  calibration.rs  decimate.rs  fixtures.rs  lib.rs  map_geometry.rs  mcap.rs  mf4.rs  mp4_sidecar.rs  noop.rs  openlabel.rs  pcd.rs  pointcloud.rs  reader.rs  recipe.rs  registry.rs  ros1_bag.rs  ros2_db3.rs  sqlite.rs  tabular.rs  time.rs  trajectory.rs  types.rs
crates/data-core/src/mcap/: cdr.rs  mod.rs  summary.rs  video_scan.rs
crates/data-core/src/ros/: cdr.rs  error.rs  mod.rs  msgdef.rs  reader_common.rs  ros1.rs  tests.rs  typestore.rs
crates/data-core/src/ros/typedefs/: geometry_msgs__Accel.msg  geometry_msgs__Pose.msg  geometry_msgs__PoseStamped.msg  geometry_msgs__Transform.msg  geometry_msgs__TransformStamped.msg  geometry_msgs__TwistStamped.msg  nav_msgs__Odometry.msg  rosgraph_msgs__Log.msg  sensor_msgs__FluidPressure.msg  sensor_msgs__Imu.msg  sensor_msgs__MagneticField.msg  sensor_msgs__NavSatFix.msg  sensor_msgs__Temperature.msg  std_msgs__Header.msg  tf2_msgs__TFMessage.msg
crates/data-core/tests/: arrow_contract.rs  map_geometry_reader.rs  mcap_reader.rs  mf4_reader.rs  mp4_reader.rs  noop_reader.rs  openlabel_reader.rs  recipe_acme.rs  recipe_schema_contract.rs  ros1_bag_reader.rs  ros2_db3_reader.rs  ros2_mcap_reader.rs  ros2_mcap_video.rs
crates/wasm-bindings/: Cargo.toml
crates/wasm-bindings/src/: lib.rs
docs/: 01-vision-and-scope.md  02-architecture.md  03-data-model.md  04-reader-abstraction.md  05-video-pipeline.md  06-ui-and-panels.md  07-build-and-tooling.md  08-risks-and-open-questions.md  09-verification-plan.md  10-task-breakdown.md  11-agent-interface.md  12-format-agent.md  13-bring-your-own-agent.md  13-camera-lidar-calibration.md  README.md  codebase-map.html  docs-sync-state.json  handoff-nuscenes-video-pacing.md  spike-T0.2-webcodecs-mcap.md  spike-T0.3-sample-corpus.md  verification-t6.3-run.md
docs/book/: 01-what-driveline-is.md  02-three-languages.md  03-repo-tour.md  04-rust-core.md  05-wasm-bridge.md  06-react-and-store.md  07-workers-and-comlink.md  08-wire-formats.md  09-video-pipeline.md  10-timeline-and-playback.md  11-run-test-ship.md  README.md
docs/design/: README.md  STATUS.md  v1-shell-integration.md
docs/marketing/: 00-go-to-market.md  01-content-kit.md  02-deployment.md  03-automation-matrix.md  04-press-kit-one-pager.md  05-community-launch-playbook.md
docs/reviews/: 2026-04-19-review.md  2026-04-19-test-audit.md  2026-04-20-review.md  2026-04-20-test-audit.md  2026-04-25-review.md  2026-04-25-test-audit.md  2026-04-26-review.md  2026-04-26-test-audit.md  2026-04-27-review.md  2026-04-27-test-audit.md  2026-04-28-test-audit.md  2026-04-29-review.md  2026-04-29-test-audit.md  2026-04-30-review.md  2026-04-30-test-audit.md  2026-05-01-review.md  2026-05-01-test-audit.md  2026-05-02-review.md  2026-05-02-test-audit.md  2026-05-03-test-audit.md  2026-05-04-review.md  2026-05-04-test-audit.md  2026-05-05-review.md  2026-05-05-test-audit.md  2026-05-06-review.md  2026-05-06-test-audit.md  2026-05-07-review.md  2026-05-07-test-audit.md  2026-05-08-review.md  2026-05-08-test-audit.md  2026-05-09-review.md  2026-05-09-test-audit.md  2026-05-10-review.md  2026-05-10-test-audit.md  2026-05-11-review.md  2026-05-11-test-audit.md  2026-05-12-review.md  2026-05-12-test-audit.md  2026-05-13-review.md  2026-05-13-test-audit.md  (+34 more)
docs/schemas/: layoutProposal.v1.schema.json
docs/sync-logs/: 2026-04-30-docs-sync.md  2026-05-01-docs-sync.md  2026-05-02-docs-sync.md  2026-05-04-docs-sync.md  2026-05-05-docs-sync.md  2026-05-06-docs-sync.md  2026-05-07-docs-sync.md  2026-05-08-docs-sync.md  2026-05-09-docs-sync.md  2026-05-10-docs-sync.md  2026-05-11-docs-sync.md  2026-05-14-docs-sync.md  2026-05-16-docs-sync.md  2026-05-17-docs-sync.md  2026-05-18-docs-sync.md  2026-05-20-docs-sync.md  2026-05-21-docs-sync.md  2026-05-22-docs-sync.md  2026-05-28-docs-sync.md
sample-data/: .gitignore  EXPECTED_HASHES.txt  README.md  generate.py  generate_acme.py  generate_calib_scene.py  generate_tabular.py  sample.acme.agent-transcript.md  sample.acme.recipe.json  short.mf4  short.mp4.timestamps
sample-data/calib/: scene.calib.json  scene.lidar.parquet  scene_cam_front.mp4.timestamps
sample-data/openlabel/: comma-scene.openlabel.json  comma-trajectory.trajectory.json  vcd-cuboids.openlabel.json
sample-data/realworld/: README.md
sample-data/schemas/: driveline.ControlMode.jsonschema  foxglove.CompressedVideo.jsonschema  foxglove.Float64.jsonschema  foxglove.Vector3.jsonschema
scripts/: check-bundle-size.mjs  check-js-licenses.mjs  convert_comma2k19_to_mcap.py  convert_comma2k19_to_mf4.py  convert_kitti_to_mcap.py  convert_kitti_to_mf4.py  convert_nuscenes_signals_to_mcap.py  convert_nuscenes_to_driveline.py  fetch-ros-fixtures.sh  format-agent-smoke.ts  gen_many_signals_mf4.py  record-byoa-demo.sh  record-byoa-odd.sh  run-vite-node.mjs  setup-test-env.sh
test-fixtures/: arrow_bounding_box.ipc  arrow_calibration.ipc  arrow_scalar.ipc  arrow_trajectory.ipc  map_example_intersection.xodr  map_opendrive.xodr  map_simple.json  openlabel_cuboids.json  short.mcap  short.mf4  short.mp4.timestamps  short.zstd.mcap
tools/: README.md  alpamayo_lidar_to_driveline.py  alpamayo_open.py
(+461 files in other folders)
