[package]
name = "data-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Driveline data-core: Reader trait, format adapters, Arrow IPC producers."

[dependencies]
arrow-array = "54"
arrow-schema = "54"
arrow-buffer = "54"
arrow-ipc = "54"
thiserror = "2"
mf4-rs = { git = "https://github.com/dmagyar-0/mf4-rs", rev = "af795676d490c5a972796c25a327c10205d93f51" }
mcap = { version = "0.23", default-features = false }
serde_json = "1"
base64 = "0.22"
mp4 = "0.14"
