[package]
name = "wasm-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen glue exposing data-core to the browser worker."

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# wasm-opt is downloaded lazily by wasm-pack; disable to keep CI / sandboxed
# builds hermetic. Re-enable on developer machines by overriding this to true.
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[dependencies]
data-core = { path = "../data-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
