[package]
name = "wasm-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen glue exposing data-core to the browser worker."

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# Size-optimise the shipped WASM. wasm-opt is fetched lazily by wasm-pack and
# is required to stay within the <2 MB-gzip budget enforced by
# `scripts/check-bundle-size.mjs`. `-Oz` optimises aggressively for size.
wasm-opt = ['-Oz']

[package.metadata.wasm-pack.profile.dev]
# Keep dev builds fast — skip wasm-opt entirely.
wasm-opt = false

[dependencies]
data-core = { path = "../data-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
slab = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
